Make code more modular.

--- a/notebooks/test_dataset.ipynb
+++ b/notebooks/test_dataset.ipynb
@@ -23,39 +23,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(60, 16000)\n"
+      "(64, 63, 40, 1)\n"
      ]
     }
    ],
    "source": [
-    "config = {'ds_type': 'samples',\n",
+    "config = {'ds_type': 'cpc-enc',\n",
     "         'batch_sz': 64}\n",
     "mn, mx = 0, 0\n",
-    "for batch in build_dataset(config, 'train'):\n",
+    "for batch in build_dataset(config, 'val'):\n",
     "    x, y = batch\n",
     "    mx = np.maximum(np.max(x), mx)\n",
     "    mn = np.minimum(np.min(x), mn)\n",
-    "#     break\n",
+    "    break\n",
     "print(x.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9999906420707703 -0.9999905824661255\n"
+      "0.8389858603477478 -0.9352371692657471\n"
      ]
     }
    ],
@@ -170,5 +170,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
